fix(google): header background/search bar on mobile

--- a/styles/google/catppuccin.user.css
+++ b/styles/google/catppuccin.user.css
@@ -636,6 +636,20 @@
     }
 
     /* mobile ui */
+    /* header background & search bar */
+    .v6U7rf {
+        background-color: @base;
+    }
+      
+    .zGVn2e {
+        background: @surface0 !important;
+        color: @text;
+    }
+      
+    .u4frDf {
+        background: @surface0 !important;
+    }
+
     /* search suggestions */
     .K4VNlb,
     .Sl6fgd.A7Yvie,
